--- a/src/scss/unikorn/forms/_input-group.scss
+++ b/src/scss/unikorn/forms/_input-group.scss
@@ -107,7 +107,7 @@
   border: $input-border-width solid $input-group-addon-border-color;
   background-color: $input-group-addon-bg;
   color: $input-group-addon-color;
-  font-size: $font-size-base; // Match inputs
+  font-size: $input-font-size; // Match inputs
   line-height: $input-line-height;
   font-weight: $font-weight-normal;
   text-align: center;
