--- a/src/scss/unikorn/globals/_functions.scss
+++ b/src/scss/unikorn/globals/_functions.scss
@@ -22,16 +22,16 @@
 }
 
 // Starts at zero
-// Another grid mixin that ensures the min-width of the lowest breakpoint starts at 0.
-@mixin _assert-starts-at-zero($map) {
+// Used to ensure the min-width of the lowest breakpoint starts at 0.
+@mixin _assert-starts-at-zero($map, $map-name: "$grid-breakpoints") {
   $values: map-values($map);
   $first-value: nth($values, 1);
   @if $first-value != 0 {
-    @warn "First breakpoint in `$grid-breakpoints` must start at 0, but starts at #{$first-value}.";
+    @warn "First breakpoint in #{$map-name} must start at 0, but starts at #{$first-value}.";
   }
 }
 
-// Replace `$search` with `$replace` in `$string`.
+// Replace `$search` with `$replace` in `$string`
 // Used on our SVG icon backgrounds for custom forms.
 @function str-replace($string, $search, $replace: "") {
   $index: str-index($string, $search);
