--- a/src/scss/unikorn/components/_badge.scss
+++ b/src/scss/unikorn/components/_badge.scss
@@ -16,6 +16,7 @@
   white-space: nowrap;
   vertical-align: baseline;
   @include border-radius($badge-border-radius);
+  @include transition($badge-transition);
 
   @at-root a#{&} {
     @include hover-focus {
