--- a/src/scss/unikorn/components/_dropdown.scss
+++ b/src/scss/unikorn/components/_dropdown.scss
@@ -12,6 +12,8 @@
 }
 
 .dropdown-toggle {
+  white-space: nowrap;
+
   // Generate the caret automatically
   @include caret;
 }
@@ -32,8 +34,8 @@
   border: $dropdown-border-width solid $dropdown-border-color;
   background-clip: padding-box;
   background-color: $dropdown-bg;
-  color: $body-color;
-  font-size: $font-size-base; // Redeclare because nesting can cause inheritance issues
+  color: $dropdown-color;
+  font-size: $dropdown-font-size; // Redeclare because nesting can cause inheritance issues
   text-align: left; // Ensures proper alignment if parent has it changed (e.g., modal footer)
   list-style: none;
   @include border-radius($dropdown-border-radius);
@@ -48,12 +50,6 @@
       right: 0;
       left: auto;
     }
-  }
-}
-
-@each $breakpoint in map-keys($grid-breakpoints) {
-  @include media-breakpoint-up($breakpoint) {
-    $infix: breakpoint-infix($breakpoint, $grid-breakpoints);
 
     .dropdown-menu#{$infix}-left {
       right: auto;
@@ -130,7 +126,7 @@
 // Dividers (basically an `<hr>`) within the dropdown
 // ----------------------------
 .dropdown-divider {
-  @include nav-divider($dropdown-divider-bg);
+  @include nav-divider($dropdown-divider-bg, $dropdown-divider-margin-y);
 }
 
 
@@ -142,19 +138,23 @@
   width: 100%; // For `<button>`s
   padding: $dropdown-item-padding-y $dropdown-item-padding-x;
   border: 0; // For `<button>`s
-  background: transparent; // For `<button>`s
+  background-color: transparent; // For `<button>`s
   color: $dropdown-link-color;
   font-weight: $font-weight-normal;
   text-align: inherit; // For `<button>`s
   white-space: nowrap; // prevent links from randomly breaking onto new lines
   clear: both;
 
-  &:first-child {
-    @include border-top-radius($dropdown-inner-border-radius);
-  }
+  // Prevent dropdown overflow if there's no padding
+  // See https://github.com/twbs/bootstrap/pull/27703
+  @if $dropdown-padding-y == 0 {
+    &:first-child {
+      @include border-top-radius($dropdown-inner-border-radius);
+    }
 
-  &:last-child {
-    @include border-bottom-radius($dropdown-inner-border-radius);
+    &:last-child {
+      @include border-bottom-radius($dropdown-inner-border-radius);
+    }
   }
 
   @include hover-focus {
@@ -176,6 +176,8 @@
     background-color: transparent;
     color: $dropdown-link-disabled-color;
     pointer-events: none;
+
+    // Remove CSS gradients if they're enabled
     @if $enable-gradients {
       background-image: none;
     }
