--- a/src/scss/unikorn/components/_list-group.scss
+++ b/src/scss/unikorn/components/_list-group.scss
@@ -26,6 +26,7 @@
 
   // Hover state
   @include hover-focus {
+    z-index: 1; // Place hover/focus items above their siblings for proper border styling
     background-color: $list-group-hover-bg;
     color: $list-group-action-hover-color;
     text-decoration: none;
@@ -81,6 +82,36 @@
   }
 }
 
+
+// Horizontal
+// ----------------------------
+// Change the layout of list group items from vertical (default) to horizontal.
+
+@each $breakpoint in map-keys($grid-breakpoints) {
+  @include media-breakpoint-up($breakpoint) {
+    $infix: breakpoint-infix($breakpoint, $grid-breakpoints);
+
+    .list-group-horizontal#{$infix} {
+      flex-direction: row;
+
+      .list-group-item {
+        margin-right: -$list-group-border-width;
+        margin-bottom: 0;
+
+        &:first-child {
+          @include border-left-radius($list-group-border-radius);
+          @include border-top-right-radius(0);
+        }
+
+        &:last-child {
+          margin-right: 0;
+          @include border-right-radius($list-group-border-radius);
+          @include border-bottom-left-radius(0);
+        }
+      }
+    }
+  }
+}
 
 // Flush list items
 // ----------------------------
