--- a/src/scss/unikorn/components/_toasts.scss
+++ b/src/scss/unikorn/components/_toasts.scss
@@ -8,13 +8,14 @@
   max-width: $toast-max-width;
   overflow: hidden; // cheap rounded corners on nested items
   border: $toast-border-width solid $toast-border-color;
-  border-radius: $toast-border-radius;
   background-clip: padding-box;
   background-color: $toast-background-color;
+  color: $toast-color;
   font-size: $toast-font-size; // knock it down to 14px
   box-shadow: $toast-box-shadow;
   opacity: 0;
   backdrop-filter: blur(10px);
+  @include border-radius($toast-border-radius);
 
 
   &:not(:last-child) {
