--- a/src/scss/unikorn/content/_reset.scss
+++ b/src/scss/unikorn/content/_reset.scss
@@ -28,7 +28,7 @@ html {
   font-family: sans-serif; // 2
   line-height: 1.15; // 3
   -webkit-text-size-adjust: 100%; // 4
-  -webkit-tap-highlight-color: rgba($black, 0); // 6
+  -webkit-tap-highlight-color: rgba($black, 0); // 5
 }
 
 
@@ -310,6 +310,13 @@ select {
   text-transform: none; // Remove the inheritance of text transform in Firefox
 }
 
+// Remove the inheritance of word-wrap in Safari.
+//
+// Details at https://github.com/twbs/bootstrap/issues/24990
+select {
+  word-wrap: normal;
+}
+
 // 1. Prevent a WebKit bug where (2) destroys native `audio` and `video`
 //    controls in Android 4.
 // 2. Correct the inability to style clickable types in iOS and Safari.
@@ -318,6 +325,18 @@ button,
 [type="reset"],
 [type="submit"] {
   -webkit-appearance: button; // 2
+}
+
+// Opinionated: add "hand" cursor to non-disabled button elements.
+@if $enable-pointer-cursor-for-buttons {
+  button,
+  [type="button"],
+  [type="reset"],
+  [type="submit"] {
+    &:not(:disabled) {
+      cursor: pointer;
+    }
+  }
 }
 
 // Remove inner border and padding from Firefox, but don't restore the outline like Normalize.
@@ -400,7 +419,7 @@ progress {
   -webkit-appearance: none;
 }
 
-// Remove the inner padding and cancel buttons in Chrome and Safari on macOS.
+// Remove the inner padding in Chrome and Safari on macOS.
 // ----------------------------
 [type="search"]::-webkit-search-decoration {
   -webkit-appearance: none;
