--- a/src/scss/unikorn/content/_tables.scss
+++ b/src/scss/unikorn/content/_tables.scss
@@ -6,9 +6,9 @@
 // ----------------------------
 .table {
   width: 100%;
-  max-width: 100%;
   margin-bottom: $spacer;
   background-color: $table-bg; // Reset for nesting within parents with `background-color`.
+  color: $table-color;
 
   th,
   td {
@@ -24,10 +24,6 @@
 
   tbody + tbody {
     border-top: (2 * $table-border-width) solid $table-border-color;
-  }
-
-  .table {
-    background-color: $body-bg;
   }
 }
 
@@ -86,6 +82,7 @@
   tbody tr {
     @include hover {
       background-color: $table-hover-bg;
+      color: $table-hover-color;
     }
   }
 }
@@ -96,7 +93,7 @@
 // Exact selectors below required to override `.table-striped` and prevent
 // inheritance to nested tables.
 @each $color, $value in $theme-colors {
-  @include table-row-variant($color, theme-color-level($color, -9));
+  @include table-row-variant($color, theme-color-level($color, $table-bg-level), theme-color-level($color, $table-border-level));
 }
 
 @include table-row-variant(active, $table-active-bg);
@@ -148,6 +145,7 @@
     tbody tr {
       @include hover {
         background-color: $table-dark-hover-bg;
+        color: $table-dark-hover-color;
       }
     }
   }
@@ -169,7 +167,6 @@
         width: 100%;
         overflow-x: auto;
         -webkit-overflow-scrolling: touch;
-        -ms-overflow-style: -ms-autohiding-scrollbar; // See https://github.com/twbs/bootstrap/pull/10057
 
         // Prevent double border on horizontal scroll due to use of `display: block;`
         > .table-bordered {
