--- a/src/scss/unikorn/globals/_mixins.scss
+++ b/src/scss/unikorn/globals/_mixins.scss
@@ -5,42 +5,42 @@
 
 // Utilities
 // ----------------------------
-@import "../mixins/utilities/breakpoints";
-@import "../mixins/utilities/hover";
-@import "../mixins/utilities/image";
-@import "../mixins/utilities/badge";
-@import "../mixins/utilities/resize";
-@import "../mixins/utilities/screen-reader";
-@import "../mixins/utilities/size";
-@import "../mixins/utilities/reset-text";
-@import "../mixins/utilities/text-emphasis";
-@import "../mixins/utilities/text-hide";
-@import "../mixins/utilities/text-truncate";
-@import "../mixins/utilities/visibility";
+@import "../mixins/breakpoints";
+@import "../mixins/hover";
+@import "../mixins/image";
+@import "../mixins/badge";
+@import "../mixins/resize";
+@import "../mixins/screen-reader";
+@import "../mixins/size";
+@import "../mixins/reset-text";
+@import "../mixins/text-emphasis";
+@import "../mixins/text-hide";
+@import "../mixins/text-truncate";
+@import "../mixins/visibility";
 
 // Components
 // ----------------------------
-@import "../mixins/components/alert";
-@import "../mixins/components/buttons";
-@import "../mixins/components/caret";
-@import "../mixins/components/pagination";
-@import "../mixins/components/lists";
-@import "../mixins/components/list-group";
-@import "../mixins/components/nav-divider";
-@import "../mixins/components/forms";
-@import "../mixins/components/table-row";
+@import "../mixins/alert";
+@import "../mixins/buttons";
+@import "../mixins/caret";
+@import "../mixins/pagination";
+@import "../mixins/lists";
+@import "../mixins/list-group";
+@import "../mixins/nav-divider";
+@import "../mixins/forms";
+@import "../mixins/table-row";
 
 // Skins
 // ----------------------------
-@import "../mixins/skins/background-variant";
-@import "../mixins/skins/border-radius";
-@import "../mixins/skins/box-shadow";
-@import "../mixins/skins/gradients";
-@import "../mixins/skins/transition";
+@import "../mixins/background-variant";
+@import "../mixins/border-radius";
+@import "../mixins/box-shadow";
+@import "../mixins/gradients";
+@import "../mixins/transition";
 
 // Layout
 // ----------------------------
-@import "../mixins/layout/clearfix";
-@import "../mixins/layout/grid-framework";
-@import "../mixins/layout/grid";
-@import "../mixins/layout/float";
+@import "../mixins/clearfix";
+@import "../mixins/grid-framework";
+@import "../mixins/grid";
+@import "../mixins/float";
