--- a/src/scss/unikorn/globals/_utilities.scss
+++ b/src/scss/unikorn/globals/_utilities.scss
@@ -16,5 +16,6 @@
 @import "../utilities/shadows";
 @import "../utilities/sizing";
 @import "../utilities/spacing";
+@import "../utilities/stretched-link";
 @import "../utilities/text";
 @import "../utilities/visibility";
