--- a/src/scss/unikorn/mixins/_badge.scss
+++ b/src/scss/unikorn/mixins/_badge.scss
@@ -13,5 +13,11 @@
       color: color-yiq($bg);
       text-decoration: none;
     }
+
+    &:focus,
+    &.focus {
+      outline: 0;
+      box-shadow: 0 0 0 $badge-focus-width rgba($bg, .5);
+    }
   }
 }
