--- a/src/scss/unikorn/mixins/_border-radius.scss
+++ b/src/scss/unikorn/mixins/_border-radius.scss
@@ -2,14 +2,15 @@
 // Mixins - Border radius
 // ============================================================================
 
-// Single side border-radius
-@mixin border-radius($radius: $border-radius) {
+@mixin border-radius($radius: $border-radius, $fallback-border-radius: false) {
   @if $enable-rounded {
     border-radius: $radius;
   }
+  @else if $fallback-border-radius != false {
+    border-radius: $fallback-border-radius;
+  }
 }
 
-// Top side border-radius
 @mixin border-top-radius($radius) {
   @if $enable-rounded {
     border-top-left-radius: $radius;
@@ -17,7 +18,6 @@
   }
 }
 
-// Right side border-radius
 @mixin border-right-radius($radius) {
   @if $enable-rounded {
     border-top-right-radius: $radius;
@@ -25,7 +25,6 @@
   }
 }
 
-// Bottom side border-radius
 @mixin border-bottom-radius($radius) {
   @if $enable-rounded {
     border-bottom-right-radius: $radius;
@@ -33,10 +32,33 @@
   }
 }
 
-// Left side border-radius
 @mixin border-left-radius($radius) {
   @if $enable-rounded {
     border-top-left-radius: $radius;
+    border-bottom-left-radius: $radius;
+  }
+}
+
+@mixin border-top-left-radius($radius) {
+  @if $enable-rounded {
+    border-top-left-radius: $radius;
+  }
+}
+
+@mixin border-top-right-radius($radius) {
+  @if $enable-rounded {
+    border-top-right-radius: $radius;
+  }
+}
+
+@mixin border-bottom-right-radius($radius) {
+  @if $enable-rounded {
+    border-bottom-right-radius: $radius;
+  }
+}
+
+@mixin border-bottom-left-radius($radius) {
+  @if $enable-rounded {
     border-bottom-left-radius: $radius;
   }
 }
