--- a/src/scss/unikorn/mixins/_grid.scss
+++ b/src/scss/unikorn/mixins/_grid.scss
@@ -4,10 +4,10 @@
 // Generate semantic grid columns with these mixins.
 
 // Container.
-@mixin make-container() {
+@mixin make-container($gutter: $grid-gutter-width) {
   width: 100%;
-  padding-right: ($grid-gutter-width / 2);
-  padding-left: ($grid-gutter-width / 2);
+  padding-right: ($gutter / 2);
+  padding-left: ($gutter / 2);
   margin-right: auto;
   margin-left: auto;
 }
@@ -23,24 +23,23 @@
 }
 
 // Row
-@mixin make-row() {
+@mixin make-row($gutter: $grid-gutter-width) {
   display: flex;
   flex-wrap: wrap;
-  margin-right: ($grid-gutter-width / -2);
-  margin-left: ($grid-gutter-width / -2);
+  margin-right: ($gutter / -2);
+  margin-left: ($gutter / -2);
 }
 
 // Columns ready
-@mixin make-col-ready() {
+@mixin make-col-ready($gutter: $grid-gutter-width) {
   position: relative;
 
   // Prevent columns from becoming too narrow when at smaller grid tiers by
   // always setting `width: 100%;`. This works because we use `flex` values
   // later on to override this initial width.
   width: 100%;
-  min-height: 1px; // Prevent collapsing
-  padding-right: ($grid-gutter-width / 2);
-  padding-left: ($grid-gutter-width / 2);
+  padding-right: ($gutter / 2);
+  padding-left: ($gutter / 2);
 }
 
 // Column
