--- a/src/scss/unikorn/mixins/_transition.scss
+++ b/src/scss/unikorn/mixins/_transition.scss
@@ -13,7 +13,7 @@
   }
 
   @if $enable-prefers-reduced-motion-media-query {
-    @media screen and (prefers-reduced-motion: reduce) {
+    @media (prefers-reduced-motion: reduce) {
       transition: none;
     }
   }
