--- a/src/scss/unikorn/utilities/_borders.scss
+++ b/src/scss/unikorn/utilities/_borders.scss
@@ -30,6 +30,10 @@
 
 // Border-radius
 // ----------------------------
+.rounded-sm {
+  border-radius: $border-radius-sm !important;
+}
+
 .rounded {
   border-radius: $border-radius !important;
 }
@@ -52,6 +56,10 @@
 .rounded-left {
   border-top-left-radius: $border-radius !important;
   border-bottom-left-radius: $border-radius !important;
+}
+
+.rounded-lg {
+  border-radius: $border-radius-lg !important;
 }
 
 .rounded-circle {
