--- a/src/scss/unikorn/utilities/_text.scss
+++ b/src/scss/unikorn/utilities/_text.scss
@@ -5,7 +5,7 @@
 
 // Text
 // ----------------------------
-.text-monospace { font-family: $font-family-monospace; }
+.text-monospace { font-family: $font-family-monospace !important; }
 
 // Alignment
 // ----------------------------
@@ -62,6 +62,11 @@
 }
 
 .text-decoration-none { text-decoration: none !important; }
+
+.text-break {
+  word-break: break-word !important; // IE & < Edge 18
+  overflow-wrap: break-word !important;
+}
 
 // Reset
 // ----------------------------
