fix(fonts): add font-display
Close #49

--- a/src/views/partials/_fonts.pug
+++ b/src/views/partials/_fonts.pug
@@ -1,9 +1,9 @@
 //- partials/_fonts.pug
 // Fonts CSS File
 link(
-  rel="preload" href="https://fonts.googleapis.com/css?family=Aclonica%7CRoboto"
+  rel="preload" href="https://fonts.googleapis.com/css?family=Aclonica%7CRoboto&display=swap"
   as="style" onload="this.onload=null;this.rel='stylesheet'")
-noscript: link(rel="stylesheet" href="https://fonts.googleapis.com/css?family=Aclonica%7CRoboto")
+noscript: link(rel="stylesheet" href="https://fonts.googleapis.com/css?family=Aclonica%7CRoboto&display=swap")
 
 script(defer
   src="https://use.fontawesome.com/releases/v5.8.2/js/all.js"
