--- a/src/views/partials/_fonts.pug
+++ b/src/views/partials/_fonts.pug
@@ -1,9 +1,17 @@
 //- partials/_fonts.pug
-// Fonts CSS File
-link(
-  rel="preload" href="https://fonts.googleapis.com/css?family=Aclonica%7CRoboto&display=swap"
-  as="style" onload="this.onload=null;this.rel='stylesheet'")
-noscript: link(rel="stylesheet" href="https://fonts.googleapis.com/css?family=Aclonica%7CRoboto&display=swap")
+// Load Fonts
+script.
+  WebFontConfig = {
+    google: { families: [ 'Aclonica%7CRoboto&display=swap' ] }
+  };
+
+  (function() {
+    var wf = document.createElement('script');
+    wf.src = 'https://cdnjs.cloudflare.com/ajax/libs/webfont/1.6.28/webfontloader.js';
+    wf.async = 'true';
+    var s = document.getElementsByTagName('script')[0];
+    s.parentNode.insertBefore(wf, s);
+  })();
 
 script(defer
   src="https://use.fontawesome.com/releases/v5.8.2/js/all.js"
