fix(wai): improve the usage of ARIA

--- a/src/views/modules/navbar/_navbar.pug
+++ b/src/views/modules/navbar/_navbar.pug
@@ -3,6 +3,6 @@ nav.navbar.fixed-top.navbar-dark.bg-transparent
   .navbar-header.d-inline-flex
     button.navbar-toggler(
       type="button" role="button" data-toggle="drawer" data-target="#drawer"
-      aria-controls="#drawer" aria-expanded="false" aria-label="Toggle navigation")
+      aria-controls="drawer" aria-expanded="false" aria-label="Toggle navigation")
       i.fas.fa-bars.fa-1x
     //- a.navbar-brand.invisible.ml-3(href="./") Adorade
