fix(wai): add aria-label to form element

--- a/src/views/includes/sections/_newsletter.pug
+++ b/src/views/includes/sections/_newsletter.pug
@@ -3,7 +3,6 @@ section.newsletter.text-center#newsletter
   h2.mb-4 Check our newsletter
   form.form-inline(action="#!")
     .input-group
-      label.sr-only(for="inputEmail") your@email.here
-      input.form-control#inputEmail(type="email" placeholder="your@email.here")
+      input.form-control#newsemail(type="email" name="newsemail" placeholder="your@email.here" aria-label="your@email.here")
       .input-group-append
         button.btn.btn-outline-orange(type="submit") Submit
