--- a/src/views/layout/_base.pug
+++ b/src/views/layout/_base.pug
@@ -1,14 +1,13 @@
 //- layout/_base.pug
-html(lang="en" itemscope itemtype="http://schema.org/LocalBusiness" prefix="og: http://ogp.me/ns#")
+html(lang="en" prefix="og: http://ogp.me/ns#")
 
   include ../partials/_stamp
   block setting
 
   head
     block head
-      include ../partials/_head
+      include ../partials/_meta
       include ../partials/_statics
-      include ../partials/_opengraph
     block fonts
       include ../partials/_fonts
     block styles
