refactor(meta): remove schema.org markup

--- a/src/views/partials/_meta.pug
+++ b/src/views/partials/_meta.pug
@@ -15,15 +15,15 @@ if description
 else
   meta(name="description" content="Once upon a time, we started a journey, to discover, to learn... beautiful things.")
 
-// Schema.org markup for Google
-script(type="application/ld+json").
-  {
-    "@context": "https://schema.org",
-    "@type": "LocalBusiness",
-    "url": "https://adorade.ro",
-    "name": "Adorade - Web Design",
-    "image": "https://adorade.ro/images/share/adorade_og_share.jpg"
-  }
+//- // Schema.org markup for Google
+//- script(type="application/ld+json").
+//-   {
+//-     "@context": "https://schema.org",
+//-     "@type": "LocalBusiness",
+//-     "url": "https://adorade.ro",
+//-     "name": "Adorade - Web Design",
+//-     "image": "https://adorade.ro/images/share/adorade_og_share.jpg"
+//-   }
 
 // Open Graph / Facebook
 meta(property="og:title" content="Adorade - Web Design Company")
