--- a/src/views/partials/_statics.pug
+++ b/src/views/partials/_statics.pug
@@ -5,10 +5,10 @@
 link(rel="apple-touch-icon" sizes="180x180" href="statics/icons/apple-touch-icon.png")
 link(rel="icon" type="image/png" sizes="32x32" href="statics/icons/favicon-32x32.png")
 link(rel="icon" type="image/png" sizes="16x16" href="statics/icons/favicon-16x16.png")
-link(rel="manifest" href="statics/site.webmanifest")
+link(rel="manifest" href="site.webmanifest")
 link(rel="mask-icon" href="statics/icons/safari-pinned-tab.svg" color="#5bbad5")
 link(rel="shortcut icon" href="statics/icons/favicon.ico")
 meta(name="apple-mobile-web-app-title" content="Adorade")
 meta(name="msapplication-TileColor" content="#da532c")
-meta(name="msapplication-config" content="statics/browserconfig.xml")
+meta(name="msapplication-config" content="browserconfig.xml")
 meta(name="theme-color" content="#ff5722")
