build(gulp): disable cache during development

--- a/src/views/partials/_scripts.pug
+++ b/src/views/partials/_scripts.pug
@@ -23,4 +23,4 @@ block custom-js
   if entry.inline
     script#inline-script(defer src="js/script.min.js")
   else
-    script#main-script(defer src="js/script.js")
+    script#main-script(defer src="js/script-dev.js")
