refactor(logos): inline tech-logos

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -20,6 +20,7 @@
 @import "components/cards";
 @import "components/parallax";
 @import "components/tags";
+@import "components/tech";
 @import "components/footer";
 @import "components/modal";
 @import "components/misc";
