--- a/src/views/includes/sections/_technologies.pug
+++ b/src/views/includes/sections/_technologies.pug
@@ -6,18 +6,16 @@ section.technologies.text-center#technologies
         h2.mb-4 Technologies we work with
     .row
       .col-lg-8.offset-lg-2
-        .tech-logos
-          img(alt="image" title="WordPress" src="images/tech/wordpress.svg")
-          img(alt="image" title="php" src="images/tech/php.svg")
-          img(alt="image" title="MySQL" src="images/tech/mysql.svg" style="width:70px;margin-top:-.25rem;")
-          img(alt="image" title="HTML5" src="images/tech/html5.svg" style="width:30px;opacity:0.3;")
-          img(alt="image" title="Javascript" src="images/tech/javascript.svg")
-          img(alt="image" title="AngularJS" src="images/tech/angular.svg" style="opacity:0.25;")
-          img(alt="image" title="NodeJS" src="images/tech/nodejs.svg" style="opacity:0.7;")
-          img(alt="image" title="Firebase" src="images/tech/firebase.svg")
-          img(alt="image" title="VueJS" src="images/tech/vue.svg" style="width:35px;")
-          img(alt="image" title="Webpack" src="images/tech/webpack.svg")
-          img(alt="image" title="ElectonJS" src="images/tech/electron.svg" style="opacity:0.5;")
-          img(alt="image" title="Adobe After Effects CC" src="images/tech/aftereffects.svg" style="opacity:0.4;")
-          img(alt="image" title="MongoDB" src="images/tech/mongodb.svg" style="width:120px;opacity:0.5;")
-          img(alt="image" title="Amazon Web Services" src="images/tech/aws.svg" style="width:100px;")
+        img.tech-logos(src="images/tech/wordpress.svg" alt="logos" inline)
+        img.tech-logos(src="images/tech/php.svg" alt="logos" inline)
+        img.tech-logos.mysql(src="images/tech/mysql.svg" alt="logos" inline)
+        img.tech-logos.html5(src="images/tech/html5.svg" alt="logos" inline)
+        img.tech-logos(src="images/tech/javascript.svg" alt="logos" inline)
+        img.tech-logos.angularjs(src="images/tech/angular.svg" alt="logos" inline)
+        img.tech-logos.nodejs(src="images/tech/nodejs.svg" alt="logos" inline)
+        img.tech-logos(src="images/tech/firebase.svg" alt="logos" inline)
+        img.tech-logos.vuejs(src="images/tech/vue.svg" alt="logos" inline)
+        img.tech-logos(src="images/tech/webpack.svg" alt="logos" inline)
+        img.tech-logos.electronjs(src="images/tech/electron.svg" alt="logos" inline)
+        img.tech-logos.mongodb(src="images/tech/mongodb.svg" alt="logos" inline)
+        img.tech-logos.aws(src="images/tech/aws.svg" alt="logos" inline)
