--- a/src/views/includes/sections/_cards.pug
+++ b/src/views/includes/sections/_cards.pug
@@ -2,53 +2,52 @@
 include ../../mixins/_cards-picture
 
 section.cards#cards
-  .card-deck
-    .container
-      .row
-        .col-12.col-sm-6.col-lg-4
-          .card.card-dark.invisible
-            +cardsPicture("landscape_tree_black", "Web Design")
-            .card-img-overlay.card-d-flex.position-relative
-              h4.card-title Web Design
-              p.card-text Lorem ipsum dolor sit amet, consec tetur adipiscing elit mauris solicitud.
-              a.btn.btn-outline-orange.card-link(href="#!") Click here
+  .container
+    .row
+      .col-12.col-sm-6.col-lg-4
+        .card.card-dark.invisible
+          +cardsPicture("landscape_tree_black", "Web Design")
+          .card-img-overlay.card-d-flex
+            h4.card-title Web Design
+            p.card-text Lorem ipsum dolor sit amet, consec tetur adipiscing elit mauris solicitud.
+            a.btn.btn-outline-orange.card-link(href="#!") Click here
 
-        .col-12.col-sm-6.col-lg-4
-          .card.card-dark.invisible
-            +cardsPicture("lighthouse_lantern_sky_storm_night", "Web Development")
-            .card-img-overlay.card-d-flex.position-relative
-              h4.card-title Web Dev
-              p.card-text Lorem ipsum dolor sit amet, consec tetur adipiscing elit mauris solicitud.
-              a.btn.btn-outline-orange.card-link(href="#!") Click here
+      .col-12.col-sm-6.col-lg-4
+        .card.card-dark.invisible
+          +cardsPicture("lighthouse_lantern_sky_storm_night", "Web Development")
+          .card-img-overlay.card-d-flex
+            h4.card-title Web Dev
+            p.card-text Lorem ipsum dolor sit amet, consec tetur adipiscing elit mauris solicitud.
+            a.btn.btn-outline-orange.card-link(href="#!") Click here
 
-        .col-12.col-sm-6.col-lg-4
-          .card.card-dark.invisible
-            +cardsPicture("road_sunset_marking_grass", "Mobile Development")
-            .card-img-overlay.card-d-flex.position-relative
-              h4.card-title Mobile Dev
-              p.card-text Lorem ipsum dolor sit amet, consec tetur adipiscing elit mauris solicitud.
-              a.btn.btn-outline-orange.card-link(href="#!") Click here
+      .col-12.col-sm-6.col-lg-4
+        .card.card-dark.invisible
+          +cardsPicture("road_sunset_marking_grass", "Mobile Development")
+          .card-img-overlay.card-d-flex
+            h4.card-title Mobile Dev
+            p.card-text Lorem ipsum dolor sit amet, consec tetur adipiscing elit mauris solicitud.
+            a.btn.btn-outline-orange.card-link(href="#!") Click here
 
-        .col-12.col-sm-6.col-lg-4
-          .card.card-dark.invisible
-            +cardsPicture("sunset_sun_clouds", "Web Applications")
-            .card-img-overlay.card-d-flex.position-relative
-              h4.card-title Web Apps
-              p.card-text Lorem ipsum dolor sit amet, consec tetur adipiscing elit mauris solicitud.
-              a.btn.btn-outline-orange.card-link(href="#!") Click here
+      .col-12.col-sm-6.col-lg-4
+        .card.card-dark.invisible
+          +cardsPicture("sunset_sun_clouds", "Web Applications")
+          .card-img-overlay.card-d-flex
+            h4.card-title Web Apps
+            p.card-text Lorem ipsum dolor sit amet, consec tetur adipiscing elit mauris solicitud.
+            a.btn.btn-outline-orange.card-link(href="#!") Click here
 
-        .col-12.col-sm-6.col-lg-4
-          .card.card-dark.invisible
-            +cardsPicture("sea_surf_wave_sunset", "Smart Solutions")
-            .card-img-overlay.card-d-flex.position-relative
-              h4.card-title Smart Solutions
-              p.card-text Lorem ipsum dolor sit amet, consec tetur adipiscing elit mauris solicitud.
-              a.btn.btn-outline-orange.card-link(href="#!") Click here
+      .col-12.col-sm-6.col-lg-4
+        .card.card-dark.invisible
+          +cardsPicture("sea_surf_wave_sunset", "Smart Solutions")
+          .card-img-overlay.card-d-flex
+            h4.card-title Smart Solutions
+            p.card-text Lorem ipsum dolor sit amet, consec tetur adipiscing elit mauris solicitud.
+            a.btn.btn-outline-orange.card-link(href="#!") Click here
 
-        .col-12.col-sm-6.col-lg-4
-          .card.card-dark.invisible
-            +cardsPicture("sea_waves_rocks_beach_sunrise", "Portfolio")
-            .card-img-overlay.card-d-flex.position-relative
-              h4.card-title Portfolio
-              p.card-text Lorem ipsum dolor sit amet, consec tetur adipiscing elit mauris solicitud.
-              a.btn.btn-outline-orange.card-link(href="#!") Click here
+      .col-12.col-sm-6.col-lg-4
+        .card.card-dark.invisible
+          +cardsPicture("sea_waves_rocks_beach_sunrise", "Portfolio")
+          .card-img-overlay.card-d-flex
+            h4.card-title Portfolio
+            p.card-text Lorem ipsum dolor sit amet, consec tetur adipiscing elit mauris solicitud.
+            a.btn.btn-outline-orange.card-link(href="#!") Click here
