--- a/src/views/includes/sections/_parallax.pug
+++ b/src/views/includes/sections/_parallax.pug
@@ -1,21 +1,9 @@
 //- includes/sections/_parallax.pug
-// call-to-action
 section.parallax#parallax
   .parallax-window
     .parallax-mask
-    img.img-parallax#bg-parallax(
-      src="images/hero-unit/grass_field_dawn.jpg"
-      data-speed=".5" alt="good-morning")
-
-    //- Option with lozad
-    //- picture.lozad-picture.img-parallax#bg-parallax(
-    //-   data-iesrc="images/hero-unit/grass_field_dawn.jpg" data-speed=".3" alt="good-morning")
-    //-   source(type="image/webp" srcset="images/hero-unit/grass_field_dawn.webp")
-    //-   source(type="image/jpeg" srcset="images/hero-unit/grass_field_dawn.jpg")
-    //-   noscript: img(src="images/hero-unit/grass_field_dawn.jpg" alt="Good Morning")
-
-    //- Option with picture
-    //- picture.img-parallax#bg-parallax(data-speed=".3" alt="good-morning")
-    //-   source(type="image/webp" srcset="images/hero-unit/grass_field_dawn.webp")
-    //-   source(type="image/jpeg" srcset="images/hero-unit/grass_field_dawn.jpg")
-    //-   img(src="images/hero-unit/grass_field_dawn.jpg" alt="Good Morning")
+    picture.d-block.h-100
+      source(data-srcset="images/hero-unit/grass_field_dawn.webp" type="image/webp")
+      source(data-srcset="images/hero-unit/grass_field_dawn.jpg" type="image/jpeg")
+      img.lazy-parallax.img-parallax#bg-parallax(
+        data-src="images/hero-unit/grass_field_dawn.jpg" data-speed=".6" alt="Good Morning")
