--- a/src/views/partials/_scripts.pug
+++ b/src/views/partials/_scripts.pug
@@ -13,9 +13,13 @@ block external-js
   //-   src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
   //-   integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
   //-   crossorigin="anonymous")
+  //- script(defer
+  //-   src="https://cdnjs.cloudflare.com/ajax/libs/lozad.js/1.9.0/lozad.min.js"
+  //-   integrity="sha256-50cmb3K6Zka/WMfXLFzqyo5+P+ue2JdsyEmSEsU58s4="
+  //-   crossorigin="anonymous")
   script(defer
-    src="https://cdnjs.cloudflare.com/ajax/libs/lozad.js/1.9.0/lozad.min.js"
-    integrity="sha256-50cmb3K6Zka/WMfXLFzqyo5+P+ue2JdsyEmSEsU58s4="
+    src="https://cdn.jsdelivr.net/npm/yall-js@3.1.2/dist/yall.min.js"
+    integrity="sha256-5tAElkTBynU5KcrjtDLz/qwchpESP1xqrjYJ+fg0QLM="
     crossorigin="anonymous")
 
 block custom-js
