--- a/src/views/partials/_analytics.pug
+++ b/src/views/partials/_analytics.pug
@@ -1,9 +1,10 @@
 //- partials/_analytics.pug
-// Global site tag (gtag.js) - Google Analytics
-script(async src="https://www.googletagmanager.com/gtag/js?id=UA-39823263-1")
-script.
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+if entry.inline
+  // Global site tag (gtag.js) - Google Analytics
+  script(async src="https://www.googletagmanager.com/gtag/js?id=UA-39823263-1")
+  script.
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
 
-  gtag('config', 'UA-39823263-1');
+    gtag('config', 'UA-39823263-1');
