--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -11,6 +11,8 @@
 
 @import "unikorn/unikorn";
 
+@import "mixins/fluid-aspect";
+
 @import "components/basic";
 @import "components/buttons";
 @import "components/navbar";
