--- a/src/views/includes/sections/_cards.pug
+++ b/src/views/includes/sections/_cards.pug
@@ -5,7 +5,7 @@ section.cards#cards
   .container
     .row
       .col-12.col-sm-6.col-lg-4
-        .card.card-dark.invisible
+        .card.card-dark
           +cardsPicture("landscape_tree_black", "Web Design")
           .card-img-overlay.card-d-flex
             h4.card-title Web Design
@@ -13,7 +13,7 @@ section.cards#cards
             a.btn.btn-outline-orange.card-link(href="#!") Click here
 
       .col-12.col-sm-6.col-lg-4
-        .card.card-dark.invisible
+        .card.card-dark
           +cardsPicture("lighthouse_lantern_sky_storm_night", "Web Development")
           .card-img-overlay.card-d-flex
             h4.card-title Web Dev
@@ -21,7 +21,7 @@ section.cards#cards
             a.btn.btn-outline-orange.card-link(href="#!") Click here
 
       .col-12.col-sm-6.col-lg-4
-        .card.card-dark.invisible
+        .card.card-dark
           +cardsPicture("road_sunset_marking_grass", "Mobile Development")
           .card-img-overlay.card-d-flex
             h4.card-title Mobile Dev
@@ -29,7 +29,7 @@ section.cards#cards
             a.btn.btn-outline-orange.card-link(href="#!") Click here
 
       .col-12.col-sm-6.col-lg-4
-        .card.card-dark.invisible
+        .card.card-dark
           +cardsPicture("sunset_sun_clouds", "Web Applications")
           .card-img-overlay.card-d-flex
             h4.card-title Web Apps
@@ -37,7 +37,7 @@ section.cards#cards
             a.btn.btn-outline-orange.card-link(href="#!") Click here
 
       .col-12.col-sm-6.col-lg-4
-        .card.card-dark.invisible
+        .card.card-dark
           +cardsPicture("sea_surf_wave_sunset", "Smart Solutions")
           .card-img-overlay.card-d-flex
             h4.card-title Smart Solutions
@@ -45,7 +45,7 @@ section.cards#cards
             a.btn.btn-outline-orange.card-link(href="#!") Click here
 
       .col-12.col-sm-6.col-lg-4
-        .card.card-dark.invisible
+        .card.card-dark
           +cardsPicture("sea_waves_rocks_beach_sunrise", "Portfolio")
           .card-img-overlay.card-d-flex
             h4.card-title Portfolio
