--- a/src/views/modules/drawer/_drawer.pug
+++ b/src/views/modules/drawer/_drawer.pug
@@ -14,7 +14,7 @@ include ../../mixins/_drawer
           i.fas.fa-times
       .drawer-body
         ul.drawer-nav.fa-ul
-          +drawerlink(menu)
+          +drawerLink(menu)
           //- li.nav-item.active: a.nav-link(href="./") #[span.fa-li #[i.fas.fa-home.fa-fw]] Home
           //- li.nav-item: a.nav-link(href="#!") #[span.fa-li #[i.fas.fa-history.fa-fw]] Story
           //- li.nav-item: a.nav-link(href="#!") #[span.fa-li #[i.fas.fa-info-circle.fa-fw]] About
