--- a/src/views/mixins/_top-picture.pug
+++ b/src/views/mixins/_top-picture.pug
@@ -1,8 +1,8 @@
-//- mixins/_top-header.pug
+//- mixins/_top-picture.pug
 
 //- Page Top Picture
 //------------------------
-//- include ../path/to/mixins/_top-header
+//- include ../path/to/mixins/_top-picture
 //- Usage: +topPicture("name", "alt")
 mixin topPicture(name, alt)
   picture.image-wrapper
