--- a/src/views/modules/header/_header-contact.pug
+++ b/src/views/modules/header/_header-contact.pug
@@ -1,8 +1,8 @@
-//- modules/header/_header.pug
+//- modules/header/_header-contact.pug
 include ../../mixins/_top-picture
 
 header.masthead.bg-dark
   .masthead-wraper
-    +topPicture("top", "Adorade")
+    +topPicture("top", "Contact")
     .mastehead-overlay
-      h1.display-1 Hello World!
+      h1.display-1 Contact
