--- a/src/views/modules/header/_header-info.pug
+++ b/src/views/modules/header/_header-info.pug
@@ -1,8 +1,8 @@
-//- modules/header/_header.pug
+//- modules/header/_header-info.pug
 include ../../mixins/_top-picture
 
 header.masthead.bg-dark
   .masthead-wraper
-    +topPicture("top", "Adorade")
+    +topPicture("top", "Info")
     .mastehead-overlay
-      h1.display-1 Hello World!
+      h1.display-1 Info
