--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -3,24 +3,49 @@
 // -----------------------------------------------------------------------------
 
 .masthead {
+  // height: 420px;
+  height: calc(100vh / 2);
+
   [class*="col-"] {
     padding-right: 0;
     padding-left: 0;
   }
-}
 
-.image-wrapper {
-  opacity: 0;
-  transition: opacity .9s ease-in-out;
-  visibility: hidden;
+  .masthead-wraper {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+  }
 
-  // `Non-open Graph Stories Images` appear in a rectangular format.
-  // You should use a 1.91:1 image ratio, such as 600 x 314 px.
-  // intrinsic ratio
-  @include fluid-aspect(1.91 1, ".top-img");
-}
+  .image-wrapper {
+    opacity: 0;
+    transition: opacity .9s ease-in-out;
+    visibility: hidden;
 
-.top-fade-in {
-  opacity: 1;
-  visibility: visible;
+    // `Non-open Graph Stories Images` appear in a rectangular format.
+    // You should use a 1.91:1 image ratio, such as 600 x 314 px.
+    @include fluid-aspect(1.91 1, ".top-img");
+
+    .top-img {
+      top: -15%;
+    }
+  }
+
+  .top-fade-in {
+    opacity: 1;
+    visibility: visible;
+  }
+
+  .mastehead-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    @include gradient-radial-circle(rgba($black, .1), rgba($black, .7));
+  }
 }
