--- a/src/scss/components/_parallax.scss
+++ b/src/scss/components/_parallax.scss
@@ -9,31 +9,35 @@
 
 .parallax-window {
   position: relative;
-  z-index: 1;
   width: 100%;
   height: 100%;
   overflow: hidden;
 }
 
-.parallax-mask {
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: 3;
-  width: 100%;
-  height: 100%;
-  @include gradient-radial-circle(rgba($black, .1), rgba($black, .7));
-}
-
-.img-parallax {
+.parallax-img {
   position: absolute;
   top: 0;
   left: 50%;
   z-index: -1;
   width: auto;
   transform: translate(-50%, 0);
-  pointer-events: none;
   @media screen and (min-width: 992px) {
     width: 100%;
+  }
+}
+
+.parallax-mask {
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  @include gradient-radial-circle(rgba($black, .1), rgba($black, .7));
+
+  span {
+    color: $primary-color;
   }
 }
