--- a/src/views/info.pug
+++ b/src/views/info.pug
@@ -7,4 +7,4 @@ prepend setting
   - currentUrl = 'info.html';
 
 block header
-  include modules/header/_header
+  include modules/header/_header-info
