--- a/src/views/portfolio.pug
+++ b/src/views/portfolio.pug
@@ -7,4 +7,4 @@ prepend setting
   - currentUrl = 'portfolio.html';
 
 block header
-  include modules/header/_header
+  include modules/header/_header-portfolio
