--- a/src/views/story.pug
+++ b/src/views/story.pug
@@ -7,4 +7,4 @@ prepend setting
   - currentUrl = 'story.html';
 
 block header
-  include modules/header/_header
+  include modules/header/_header-story
