refactor(images): new images for top-header

--- a/src/views/modules/header/_header-portfolio.pug
+++ b/src/views/modules/header/_header-portfolio.pug
@@ -3,6 +3,6 @@ include ../../mixins/_top-picture
 
 header.masthead.bg-dark
   .masthead-wraper
-    +topPicture("top", "Portfolio")
+    +topPicture("portfolio", "Portfolio")
     .mastehead-overlay
       h1.display-1 Portfolio
