--- a/src/views/modules/header/_header-services.pug
+++ b/src/views/modules/header/_header-services.pug
@@ -3,6 +3,6 @@ include ../../mixins/_top-picture
 
 header.masthead.bg-dark
   .masthead-wraper
-    +topPicture("top", "Services")
+    +topPicture("services", "Services")
     .mastehead-overlay
       h1.display-1 Services
