--- a/src/views/modules/header/_header-contact.pug
+++ b/src/views/modules/header/_header-contact.pug
@@ -3,6 +3,6 @@ include ../../mixins/_top-picture
 
 header.masthead.bg-dark
   .masthead-wraper
-    +topPicture("top", "Contact")
+    +topPicture("contact", "Contact")
     .mastehead-overlay
       h1.display-1 Contact
