--- a/src/views/modules/header/_header-info.pug
+++ b/src/views/modules/header/_header-info.pug
@@ -3,6 +3,6 @@ include ../../mixins/_top-picture
 
 header.masthead.bg-dark
   .masthead-wraper
-    +topPicture("top", "Info")
+    +topPicture("info", "Info")
     .mastehead-overlay
       h1.display-1 Info
